--- a/public/main.scss
+++ b/public/main.scss
@@ -523,7 +523,7 @@ div.form-control {
     position: relative;
     background-color: #33a1fd0f;
     border-radius: 50px;
-    height: 90%;
+    min-height: 90%;
     border: 2px solid #1b88e573;
     box-shadow: 0 .125rem .5rem rgba(0, 0, 0, .075) !important
   }
@@ -800,10 +800,20 @@ div.form-control {
 @media (max-width: 1700px) {
 }
 
-@media (max-height: 800px) {
+@media (max-height: 950px) {
+  #portfolio-section {
+    .bg-clipper {
+      clip-path: none;
+    }
+  }
 }
 
 @media (max-width: 1300px) {
+  #portfolio-section {
+      .bg-clipper {
+        clip-path: none;
+      }
+    }
 }
 
 @media (max-width: 1200px) {
@@ -813,6 +823,10 @@ div.form-control {
   height: 100% !important;
   align-items: center;
   display: flex;
+
+  .fp-tooltip {
+    top: 45% !important;
+  }
 
   ul {
     height: 70% !important;
@@ -861,128 +875,21 @@ div.form-control {
     border-width: 16.5px 0 16.5px 14px !important;
   }
 
-  #skills-section {
-    .bg-clipper {
-      clip-path: polygon(
-        100% 0%,
-        0% 0%,
-        0% 92%,
-        1% 91.99%,
-        2% 91.96%,
-        3% 91.92%,
-        4% 91.86%,
-        5% 91.77%,
-        6% 91.68%,
-        7% 91.56%,
-        8% 91.43%,
-        9% 91.28%,
-        10% 91.11%,
-        11% 90.93%,
-        12% 90.73%,
-        13% 90.52%,
-        14% 90.29%,
-        15% 90.04%,
-        16% 89.79%,
-        17% 89.52%,
-        18% 89.24%,
-        19% 88.94%,
-        20% 88.64%,
-        21% 88.32%,
-        22% 88%,
-        23% 87.66%,
-        24% 87.32%,
-        25% 86.97%,
-        26% 86.61%,
-        27% 86.25%,
-        28% 85.88%,
-        29% 85.51%,
-        30% 85.13%,
-        31% 84.76%,
-        32% 84.38%,
-        33% 83.99%,
-        34% 83.61%,
-        35% 83.23%,
-        36% 82.86%,
-        37% 82.48%,
-        38% 82.11%,
-        39% 81.74%,
-        40% 81.38%,
-        41% 81.02%,
-        42% 80.67%,
-        43% 80.33%,
-        44% 79.99%,
-        45% 79.67%,
-        46% 79.35%,
-        47% 79.05%,
-        48% 78.76%,
-        49% 78.47%,
-        50% 78.2%,
-        51% 77.95%,
-        52% 77.71%,
-        53% 77.48%,
-        54% 77.27%,
-        55% 77.07%,
-        56% 76.89%,
-        57% 76.72%,
-        58% 76.57%,
-        59% 76.44%,
-        60% 76.32%,
-        61% 76.22%,
-        62% 76.14%,
-        63% 76.08%,
-        64% 76.04%,
-        65% 76.01%,
-        66% 76%,
-        67% 76.01%,
-        68% 76.04%,
-        69% 76.08%,
-        70% 76.15%,
-        71% 76.23%,
-        72% 76.33%,
-        73% 76.44%,
-        74% 76.58%,
-        75% 76.73%,
-        76% 76.89%,
-        77% 77.08%,
-        78% 77.28%,
-        79% 77.49%,
-        80% 77.72%,
-        81% 77.96%,
-        82% 78.22%,
-        83% 78.49%,
-        84% 78.77%,
-        85% 79.06%,
-        86% 79.37%,
-        87% 79.69%,
-        88% 80.01%,
-        89% 80.35%,
-        90% 80.69%,
-        91% 81.04%,
-        92% 81.4%,
-        93% 81.76%,
-        94% 82.13%,
-        95% 82.5%,
-        96% 82.88%,
-        97% 83.25%,
-        98% 83.63%,
-        99% 84.02%,
-        100% 84.4%
-      );
-      // clip-path: polygon(0 0, 100% 0, 100% 96%, 75% 94%, 10% 91%, -13% 89%) !important;
-    }
-  }
-
   .bg-clipper {
     height: auto !important;
   }
 }
 
-@media (max-height: 900px) {
-  #landing-section {
-    .bg-clipper {
-      height: 110% !important;
-    }
-  }
+// @media (max-height: 900px) {
+//   #landing-section {
+//     .bg-clipper {
+//       height: 110% !important;
+//     }
+//   }
+// }
+
+.bg-clipper {
+  height: 175vh !important;
 }
 
 /* TOOLTIP */
