--- a/public/main.css
+++ b/public/main.css
@@ -740,25 +740,8 @@ div.form-control {
   color: var(--main-light);
 }
 
-/*********************************************/
-/********************************************/
-/********************************************/
-/********************************************/
-/********************************************/
-/********************************************/
-/********************************************/
-/********************************************/
-/********************************************/
-/********************************************/
-/********************************************/
-/********************************************/
-/********************************************/
-/********************************************/
-/********************************************/
-/********************************************/
-/********************************************/
-.bg-blur {
-  height: 100%;
+.bg-clipper {
+  height: 175vh !important;
 }
 
 #landing-section {
@@ -807,208 +790,25 @@ div.form-control {
 }
 
 /* KEYFRAMES & ANIMATION CLASSES */
-@-webkit-keyframes portfolioLinkAnim {
+@-webkit-keyframes tooltipAnim {
   0% {
-    transform: translateY(-50px) scale(0.8);
-    opacity: 0;
-  }
-  98% {
-    transform: scale(1.01);
-    opacity: 0.98;
-  }
-  100% {
-    transform: translateY(0) scale(1);
-    opacity: 1;
-  }
-}
-@keyframes portfolioLinkAnim {
-  0% {
-    transform: translateY(-50px) scale(0.8);
-    opacity: 0;
-  }
-  98% {
-    transform: scale(1.01);
-    opacity: 0.98;
-  }
-  100% {
-    transform: translateY(0) scale(1);
-    opacity: 1;
-  }
-}
-@-webkit-keyframes indicatorAnim {
-  0% {
-    transform: translateY(-50px);
-    opacity: 0;
-  }
-  50% {
-    transform: translateY(20px);
-    opacity: 0.5;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes indicatorAnim {
-  0% {
-    transform: translateY(-50px);
-    opacity: 0;
-  }
-  50% {
-    transform: translateY(20px);
-    opacity: 0.5;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@-webkit-keyframes firstHeroAnim {
-  0% {
-    transform: translateX(-55%);
-    opacity: 0;
-  }
-  70% {
-    transform: translateX(10px);
-    opacity: 0.7;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 0.9;
-  }
-}
-@keyframes firstHeroAnim {
-  0% {
-    transform: translateX(-55%);
-    opacity: 0;
-  }
-  70% {
-    transform: translateX(10px);
-    opacity: 0.7;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 0.9;
-  }
-}
-@-webkit-keyframes lastHeroAnim {
-  0% {
-    transform: translateX(-110%);
-    opacity: 0;
-  }
-  70% {
-    transform: translateX(10px);
-    opacity: 0.45;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 0.6;
-  }
-}
-@keyframes lastHeroAnim {
-  0% {
-    transform: translateX(-110%);
-    opacity: 0;
-  }
-  70% {
-    transform: translateX(10px);
-    opacity: 0.45;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 0.6;
-  }
-}
-@-webkit-keyframes heroAnim {
-  0% {
-    transform: translateX(-150%);
-    opacity: 0;
-  }
-  70% {
-    transform: translateX(1%);
-    opacity: 0.7;
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-@keyframes heroAnim {
-  0% {
-    transform: translateX(-150%);
-    opacity: 0;
-  }
-  70% {
-    transform: translateX(1%);
-    opacity: 0.7;
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-@-webkit-keyframes bounce {
-  50% {
-    transform: translateY(-25%);
-  }
-}
-@keyframes bounce {
-  50% {
-    transform: translateY(-25%);
-  }
-}
-.firstHeroAnim {
-  opacity: 0;
-  -webkit-animation: firstHeroAnim 0.6s 1 0s ease;
-          animation: firstHeroAnim 0.6s 1 0s ease;
-}
-
-.lastHeroAnim {
-  opacity: 0;
-  -webkit-animation: lastHeroAnim 0.8s 1 1s ease forwards;
-          animation: lastHeroAnim 0.8s 1 1s ease forwards;
-}
-
-.heroAnim {
-  opacity: 0;
-  -webkit-animation: heroAnim 1s 1 0.2s ease forwards;
-          animation: heroAnim 1s 1 0.2s ease forwards;
-}
-
-.portfolioLinkAnim {
-  opacity: 0;
-  -webkit-animation: portfolioLinkAnim 0.5s 1 0.35s ease both;
-          animation: portfolioLinkAnim 0.5s 1 0.35s ease both;
-}
-
-.indicatorAnim {
-  opacity: 0;
-  -webkit-animation: indicatorAnim 0.8s 1 0.6s ease forwards;
-          animation: indicatorAnim 0.8s 1 0.6s ease forwards;
-}
-
-@-webkit-keyframes dropDownAnim {
-  0% {
-    transform: translateY(-50px);
-    opacity: 0;
+    transform: translateY(10px);
   }
   100% {
     transform: translateY(0);
-    opacity: 1;
   }
 }
-
-@keyframes dropDownAnim {
+@keyframes tooltipAnim {
   0% {
-    transform: translateY(-50px);
-    opacity: 0;
+    transform: translateY(10px);
   }
   100% {
     transform: translateY(0);
-    opacity: 1;
   }
 }
-.dropDownAnim {
-  -webkit-animation: dropDownAnim 0.5s 1 0s ease-in-out;
-          animation: dropDownAnim 0.5s 1 0s ease-in-out;
+.tooltipAnim {
+  -webkit-animation: tooltipAnim 0.2s 1 0s ease-in-out;
+  animation: tooltipAnim 0.2s 1 0s ease-in-out;
 }
 
 /* END KEYFRAMES & ANIMATION CLASSES */
@@ -1024,32 +824,6 @@ div.form-control {
             clip-path: none;
   }
 }
-#fp-nav {
-  height: 100% !important;
-  align-items: center;
-  display: flex;
-}
-#fp-nav .fp-tooltip {
-  top: 45% !important;
-}
-#fp-nav ul {
-  height: 70% !important;
-}
-#fp-nav ul li {
-  margin: 0;
-  height: 25% !important;
-}
-#fp-nav ul li a {
-  background-color: var(--darkest-shade) !important;
-}
-#fp-nav ul li .active {
-  background-color: var(--main-dark) !important;
-}
-#fp-nav ul li span {
-  background: none;
-  display: none;
-}
-
 @media (max-width: 780px) {
   #fp-nav.fp-right {
     right: -5px !important;
@@ -1072,10 +846,6 @@ div.form-control {
     height: auto !important;
   }
 }
-.bg-clipper {
-  height: 175vh !important;
-}
-
 /* TOOLTIP */
 .tooltipSpecial {
   width: -webkit-fit-content;
@@ -1112,27 +882,6 @@ div.form-control {
 }
 .tooltipSpecial .tooltip-visible {
   opacity: 1 !important;
-}
-
-@-webkit-keyframes tooltipAnim {
-  0% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
-@keyframes tooltipAnim {
-  0% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
-.tooltipAnim {
-  -webkit-animation: tooltipAnim 0.2s 1 0s ease-in-out;
-  animation: tooltipAnim 0.2s 1 0s ease-in-out;
 }
 
 /* TOGGLER */
@@ -1182,4 +931,31 @@ label:active:after {
 .toggle-container {
   position: absolute;
   right: 10px;
+}
+
+/* FULLPAGE */
+#fp-nav {
+  height: 100% !important;
+  align-items: center;
+  display: flex;
+}
+#fp-nav .fp-tooltip {
+  top: 45% !important;
+}
+#fp-nav ul {
+  height: 70% !important;
+}
+#fp-nav ul li {
+  margin: 0;
+  height: 25% !important;
+}
+#fp-nav ul li a {
+  background-color: var(--darkest-shade) !important;
+}
+#fp-nav ul li .active {
+  background-color: var(--main-dark) !important;
+}
+#fp-nav ul li span {
+  background: none;
+  display: none;
 }/*# sourceMappingURL=main.css.map */
